Change JSON file name in main.ipynb

--- a/main.ipynb
+++ b/main.ipynb
@@ -75,7 +75,7 @@
       },
       "outputs": [],
       "source": [
-        "df = pd.read_json(\"2armed_bandit.json\")"
+        "df = pd.read_json(\"data.json\")"
       ]
     },
     {
