Update project title in main.ipynb

--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,7 @@
         "id": "K8D2mabhtCeh"
       },
       "source": [
-        "# Title of Your Group Project\n",
+        "# Modelling Reward-Based Behaviour in Two-Armed Bandit Task\n",
         "\n",
         "This Python notebook serves as a template for your group project on Experiment 1: Two-Armed Bandit Tasks for the course 'Modeling in Cognitive Science'.\n",
         "This is the practical part of the group project where you get to implement the computational modeling workflow. In this part, you are expected to:\n",
